[gd_scene load_steps=4 format=3 uid="uid://ccb80t57p483y"]

[ext_resource type="Script" path="res://src/ui/options_modal.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://dxo350gmmg0af" path="res://src/ui/hud.tres" id="1_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0, 0, 0, 0.8)

[node name="OptionsModal" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="Panel" type="Panel" parent="Background"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="Background/Panel/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Background/Panel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_theme")
theme_override_font_sizes/font_size = 24
text = "OPTIONS"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Background/Panel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_theme")
text = "X"

[node name="HSeparator" type="HSeparator" parent="Background/Panel/VBoxContainer"]
layout_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="Background/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SoundSection" type="VBoxContainer" parent="Background/Panel/VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="SoundTitle" type="Label" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection"]
layout_mode = 2
theme = ExtResource("1_theme")
theme_override_font_sizes/font_size = 18
text = "SOUND:"

[node name="Spacer1" type="Control" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MasterVolume" type="VBoxContainer" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection/MasterVolume"]
layout_mode = 2
theme = ExtResource("1_theme")
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection/MasterVolume"]
layout_mode = 2
theme = ExtResource("1_theme")
min_value = 0.0
max_value = 100.0
value = 100.0

[node name="Spacer2" type="Control" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="MusicVolume" type="VBoxContainer" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection/MusicVolume"]
layout_mode = 2
theme = ExtResource("1_theme")
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection/MusicVolume"]
layout_mode = 2
theme = ExtResource("1_theme")
min_value = 0.0
max_value = 100.0
value = 100.0

[node name="Spacer3" type="Control" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="AmbienceVolume" type="VBoxContainer" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection/AmbienceVolume"]
layout_mode = 2
theme = ExtResource("1_theme")
text = "Ambience Volume"

[node name="HSlider" type="HSlider" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection/AmbienceVolume"]
layout_mode = 2
theme = ExtResource("1_theme")
min_value = 0.0
max_value = 100.0
value = 100.0

[node name="Spacer4" type="Control" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="SFXVolume" type="VBoxContainer" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection/SFXVolume"]
layout_mode = 2
theme = ExtResource("1_theme")
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="Background/Panel/VBoxContainer/OptionsContainer/SoundSection/SFXVolume"]
layout_mode = 2
theme = ExtResource("1_theme")
min_value = 0.0
max_value = 100.0
value = 100.0

[connection signal="gui_input" from="." to="." method="_gui_input"]
[connection signal="gui_input" from="Background/Panel" to="." method="_on_panel_gui_input"]
[connection signal="pressed" from="Background/Panel/VBoxContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]

